<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:layout_margin="5dp"
    android:background="@drawable/_background_general">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/layout_user"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="visible">

            <TextView
                android:id="@+id/titre_first_connexion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:text="@string/creation_de_compte"
                android:textAlignment="center"
                android:textColor="@color/orange"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/insert_nom"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/titre_first_connexion"
                android:layout_centerHorizontal="true"
                android:layout_marginVertical="10dp"
                android:background="@drawable/_background_general"
                android:hint="@string/nom"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textColorHint="@color/green" />

            <EditText
                android:id="@+id/insert_prenom"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/insert_nom"
                android:layout_centerHorizontal="true"
                android:layout_marginVertical="10dp"
                android:background="@drawable/_background_general"
                android:hint="@string/prenom"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textColorHint="@color/green" />

            <EditText
                android:id="@+id/insert_email"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/insert_prenom"
                android:layout_centerHorizontal="true"
                android:layout_marginVertical="10dp"
                android:background="@drawable/_background_general"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textColorHint="@color/green" />

            <EditText
                android:id="@+id/insert_adresse"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/insert_email"
                android:layout_centerHorizontal="true"
                android:layout_marginVertical="10dp"
                android:background="@drawable/_background_general"
                android:hint="@string/adresse"
                android:inputType="textPostalAddress"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textColorHint="@color/green" />

            <EditText
                android:id="@+id/insert_CP"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/insert_adresse"
                android:layout_centerHorizontal="true"
                android:layout_marginVertical="10dp"
                android:background="@drawable/_background_general"
                android:hint="@string/code_postal"
                android:inputType="number"
                android:maxLength="6"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textColorHint="@color/green" />

            <EditText
                android:id="@+id/insert_town"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/insert_CP"
                android:layout_centerHorizontal="true"
                android:layout_marginVertical="10dp"
                android:background="@drawable/_background_general"
                android:hint="@string/ville"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textColorHint="@color/green" />


            <Button
                android:id="@+id/btn_validation_new_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/insert_town"
                android:layout_centerHorizontal="true"
                android:layout_marginVertical="20dp"
                android:background="@drawable/bouton_par_vert"
                android:paddingHorizontal="25dp"
                android:paddingVertical="15dp"
                android:text="@string/valider"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>