<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/RL_oublieMdp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/_background_general"
        android:paddingVertical="20dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/tv_oublieMdpAffichage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/changement_de_mot_de_passe"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textSize="20sp" />

        <RelativeLayout
            android:id="@+id/chgt_mdp_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_oublieMdpAffichage"
            android:visibility="gone">

            <EditText
                android:id="@+id/et_username_oublie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:autofillHints="password"
                android:background="@drawable/_background_general"
                android:hint="@string/nom_de_l_utilisateur_du_compte"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:minHeight="48dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textColorHint="@color/green" />

            <Button
                android:id="@+id/btn_validation_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_username_oublie"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20sp"
                android:background="@drawable/bouton_par_vert"
                android:paddingHorizontal="25dp"
                android:paddingVertical="15dp"
                android:text="@string/valider"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/RL_saisie_MDP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_oublieMdpAffichage"
            android:visibility="visible">

            <EditText
                android:id="@+id/et_mdp1_oublie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:autofillHints="password"
                android:background="@drawable/_background_general"
                android:hint="@string/mot_de_passe"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textColorHint="@color/green" />

            <EditText
                android:id="@+id/et_mdp2_oublie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_mdp1_oublie"
                android:layout_marginTop="15dp"
                android:autofillHints="password"
                android:background="@drawable/_background_general"
                android:hint="@string/mot_de_passe_2"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textColorHint="@color/green" />

            <TextView
                android:id="@+id/affichage_mdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_mdp2_oublie"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15sp"
                android:text="@string/affichage_mdp"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/validite_du_mdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/affichage_mdp"
                android:text="@string/validation_du_mot_de_passe"
                android:textAlignment="center"
                android:textColor="@color/green"
                android:layout_marginVertical="15sp"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/controle_mdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/validite_du_mdp"
                android:orientation="vertical"
                android:paddingHorizontal="5sp"
                android:paddingVertical="15sp">

                <LinearLayout
                    android:id="@+id/validation_caractere_mdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/motLong"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/REGEX_longeur_de_mot"
                        android:textAlignment="center"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/carSpec"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/REGEX_2_caract_res_speciaux"
                        android:textAlignment="center"

                        android:textColor="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/majuscules"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/REGEX_2_majuscules"
                        android:textAlignment="center"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/chiffres"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/REGEX_2_chiffres"
                        android:textAlignment="center"
                        android:textColor="@color/black" />

                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btn_validation_chgtMdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/controle_mdp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/bouton_par_vert"
                android:paddingHorizontal="25dp"
                android:layout_marginVertical="10dp"
                android:text="@string/valider"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </RelativeLayout>

    </RelativeLayout>
</RelativeLayout>