<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="15dp"
    android:layout_marginVertical="5dp"
    android:background="@drawable/_background_general">

    <LinearLayout
        android:id="@+id/LL_Entete"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center">

        <Button
            android:id="@+id/btn_Retour"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/retour"
            android:foreground="@drawable/retour" />

        <TextView
            android:id="@+id/TV_AbsenceAutre_Explications"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/absence_raison_autre"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textSize="30sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/ET_abcenceAutre"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@+id/LL_Entete"
        android:background="@drawable/_background_general"
        android:hint="@string/detaillez_les_raisons_de_votre_absence"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/btn_validationAbsence_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ET_abcenceAutre"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/bouton_par_vert"
        android:padding="20dp"
        android:paddingHorizontal="25dp"
        android:paddingVertical="15dp"
        android:text="@string/valider"
        android:textColor="@color/white"
        android:textSize="20sp" />
</RelativeLayout>